--- a/Conductivity_Resistivity.ipynb
+++ b/Conductivity_Resistivity.ipynb
@@ -101,7 +101,7 @@
     "df.dropna(subset=[\"Cond Avg\", \"Res Avg\"], inplace=True)\n",
     "df.sort_values(\"Cond Avg\", inplace=True)\n",
     "\n",
-    "# Plot corrected conductivity\n",
+    "# Plot conductivity\n",
     "plt.figure(figsize=(16, 6))\n",
     "for i, row in df.iterrows():\n",
     "    plt.plot([row['Material'], row['Material']], [row['Cond Min'], row['Cond Max']], color='darkblue', linewidth=3)\n",
