--- a/Conductivity_Resistivity.ipynb
+++ b/Conductivity_Resistivity.ipynb
@@ -27,7 +27,7 @@
     }
    ],
    "source": [
-    "# https://www.thoughtco.com/table-of-electrical-resistivity-conductivity-608499\n",
+    "# Data Source: https://www.thoughtco.com/table-of-electrical-resistivity-conductivity-608499\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
