--- a/thermal_energy_vs_temperature.ipynb
+++ b/thermal_energy_vs_temperature.ipynb
@@ -54,4 +54,18 @@
     "plt.show()"
    ]
   },
-  
+    {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85e97303",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  }
+ ],
+ "metadata": {},
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
