--- a/tunneling_probability_widget_silicon.ipynb
+++ b/tunneling_probability_widget_silicon.ipynb
@@ -1,32 +1,31 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "aa874963",
-   "metadata": {},
-   "source": [
-    "\n",
+  "cell_type": "markdown",
+  "id": "aa874963",
+  "metadata": {},
+  "source": [
     "# Quantum Tunneling Probability Explorer (Silicon)\n",
     "\n",
     "This notebook uses a widget-based interface to explore the tunneling probability of an electron in silicon as a function of:\n",
-    "- **Barrier height** \\( V_0 \\)\n",
-    "- **Electron energy** \\( E \\)\n",
-    "- **Barrier width** \\( a \\)\n",
-    "- **Effective mass** \\( m^* \\)\n",
+    "- **Barrier height** $V_0$\n",
+    "- **Electron energy** $E$\n",
+    "- **Barrier width** $a$\n",
+    "- **Effective mass** $m^*$\n",
     "\n",
     "Tunneling probability is calculated using:\n",
     "\n",
-    "\\[\n",
+    "$$\n",
     "T \\approx 16 \\left( \\frac{E}{V_0} \\right) \\left( 1 - \\frac{E}{V_0} \\right) \\exp(-2ka)\n",
-    "\\]\n",
+    "$$\n",
     "\n",
     "Where:\n",
     "\n",
-    "\\[\n",
+    "$$\n",
     "k = \\sqrt{\\frac{2m^*(V_0 - E)}{\\hbar^2}}\n",
-    "\\]\n"
-   ]
-  },
+    "$$\n"
+  ]
+},
   {
    "cell_type": "code",
    "execution_count": 1,
