--- a/Intrinsic_Carrier_Concentration_EgT.ipynb
+++ b/Intrinsic_Carrier_Concentration_EgT.ipynb
@@ -146,14 +146,14 @@
     }
    ],
    "source": [
-    "# Reconstruct materials_3 dictionary with temperature-dependent bandgap functions\n",
+    "# Temperature-dependent bandgap functions\n",
     "materials_3 = {\n",
     "    \"Ge\": {\"Nc_300K\": 1.04e19, \"Nv_300K\": 6.0e18, \"Eg_func\": Eg_Ge, \"color\": \"blue\"},\n",
     "    \"Si\": {\"Nc_300K\": 2.8e19, \"Nv_300K\": 1.04e19, \"Eg_func\": Eg_Si, \"color\": \"green\"},\n",
     "    \"GaAs\": {\"Nc_300K\": 4.7e17, \"Nv_300K\": 7.0e18, \"Eg_func\": Eg_GaAs, \"color\": \"red\"}\n",
     "}\n",
     "\n",
-    "# Query intrinsic carrier concentration at any desired temperature\n",
+    "# Intrinsic carrier concentration at any desired temperature\n",
     "T_query = 500  # Modify this value as needed\n",
     "ni_queried = {}\n",
     "\n",
