--- a/Conductivity_Resistivity.ipynb
+++ b/Conductivity_Resistivity.ipynb
@@ -32,7 +32,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Recreate the data\n",
+    "# Data from source mentioned\n",
     "data = [\n",
     "    (\"Silver\", 1.59e-8, 6.30e7),\n",
     "    (\"Copper\", 1.68e-8, 5.96e7),\n",
