--- a/one_electron_energy_levels.ipynb
+++ b/one_electron_energy_levels.ipynb
@@ -22,6 +22,7 @@
     "- \\( \\hbar \\) = reduced Planck's constant \\( = 1.055 \\times 10^{-34} \\ \\text{J·s} \\)\n",
     "- \\( n \\) = principal quantum number (1, 2, 3...)\n",
     "\n",
+    "This model describes hydrogen and other one-electron ions like He\(^+\), Li\(^{2+}\), etc."
    ]
   },
   {
