--- a/one_electron_energy_levels.ipynb
+++ b/one_electron_energy_levels.ipynb
@@ -15,13 +15,12 @@
     "$$\n",
     "\n",
     "Where:\n",
-    "- \\( E_n \\) = energy of the electron in the \\( n \\)-th orbit\n",
-    "- \\( m_e \\) = electron rest mass \\( = 9.11 \\times 10^{-31} \\ \\text{kg} \\)\n",
-    "- \\( e \\) = electron charge \\( = 1.602 \\times 10^{-19} \\ \\text{C} \\)\n",
-    "- \\( \\varepsilon_0 \\) = permittivity of free space \\( = 8.85 \\times 10^{-12} \\ \\text{F/m} \\)\n",
-    "- \\( \\hbar \\) = reduced Planck's constant \\( = 1.055 \\times 10^{-34} \\ \\text{J·s} \\)\n",
-    "- \\( n \\) = principal quantum number (1, 2, 3...)\n",
-    "\n"
+    "- $E_n$ = energy of the electron in the $n$-th orbit\n",
+    "- $m_e$ = electron rest mass $= 9.11 \\times 10^{-31} \\ \\text{kg}$\n",
+    "- $e$ = electron charge $= 1.602 \\times 10^{-19} \\ \\text{C}$\n",
+    "- $\\varepsilon_0$ = permittivity of free space $= 8.85 \\times 10^{-12} \\ \\text{F/m}$\n",
+    "- $\\hbar$ = reduced Planck's constant $= 1.055 \\times 10^{-34} \\ \\text{J·s}$\n",
+    "- $n$ = principal quantum number (1, 2, 3...)\n"
    ]
   },
   {
