--- a/tunneling_probability_widget_silicon.ipynb
+++ b/tunneling_probability_widget_silicon.ipynb
@@ -7,7 +7,7 @@
   "source": [
     "# Quantum Tunneling Probability Explorer (Silicon)\n",
     "\n",
-    "This notebook uses a widget-based interface to explore the tunneling probability of an electron in silicon as a function of:\n",
+    "This notebook explore the tunneling probability of an electron in silicon as a function of:\n",
     "- **Barrier height** $V_0$\n",
     "- **Electron energy** $E$\n",
     "- **Barrier width** $a$\n",
