--- a/Silicon_Probability_Occupation_Conduction.ipynb
+++ b/Silicon_Probability_Occupation_Conduction.ipynb
@@ -59,7 +59,7 @@
     "# Band gap for silicon\n",
     "Eg = 1.12  # eV\n",
     "\n",
-    "# Energy difference Ec - Ef\n",
+    "# Example Case for this study - Energy difference Ec - Ef\n",
     "Ec_minus_Ef = 0.25  # eV\n",
     "\n",
     "# Temperature range\n",
