--- a/Silicon_Probability_Occupation_Conduction.ipynb
+++ b/Silicon_Probability_Occupation_Conduction.ipynb
@@ -126,7 +126,7 @@
     "f_F(E) = \\frac{1}{1 + \\exp\\left(\\frac{E - E_F}{kT}\\right)}\n",
     "$$\n",
     "\n",
-    "### Boltzmann approximation (valid when \\( E - E_F \\gg kT \\))\n",
+    "### Boltzmann approximation \n",
     "\n",
     "$$\n",
     "f_B(E) \\approx \\exp\\left(-\\frac{E - E_F}{kT}\\right)\n",
