--- a/Resistivity_vs_Impurity_Silicon_300K.ipynb
+++ b/Resistivity_vs_Impurity_Silicon_300K.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Doped Silicon Resistivity\n",
     "\n",
-    "This notebook computes and plots the **resistivity** of silicon at 300 K for both n-type and p-type doping using the formula: (** Without non-linear mobility effects **)\n",
+    "This notebook computes and plots the **resistivity** of silicon at 300 K for both n-type and p-type doping using the formula: **Without non-linear mobility effects**)\n",
     "\n",
     "$$\n",
     "\\rho = \\frac{1}{q \\mu N}\n",
