--- a/Hall_Effect_Semiconductors.ipynb
+++ b/Hall_Effect_Semiconductors.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Hall Effect in Semiconductors \n",
-    "## Donald A. Neamen, *Semiconductor Physics and Devices: Basic Principles*, 4th Edition, McGraw-Hill Education, 2011. ISBN: 978-0073380643.\n",
+    "## Source: Donald A. Neamen, *Semiconductor Physics and Devices: Basic Principles*, 4th Edition, McGraw-Hill Education, 2011. ISBN: 978-0073380643.\n",
     "\n",
     "This notebook explains the **Hall Effect** in semiconductors using key formulas and an example problem. The Hall Effect is used to determine whether a semiconductor is _n-type_ or _p-type_ and to measure the majority carrier concentration and mobility.\n"
    ]
