--- a/Continuity_Equations.ipynb
+++ b/Continuity_Equations.ipynb
@@ -50,12 +50,12 @@
     "\n",
     "### Hole Current Density\n",
     "$$\n",
-    "J_p = e \\mu_p p \\mathbf{E} - e D_p \\frac{\\partial p}{\\partial x} \\tag{6.20}\n",
+    "J_p = e \\mu_p p \\mathbf{E} - e D_p \\frac{\\partial p}{\\partial x} \n",
     "$$\n",
     "\n",
     "### Electron Current Density\n",
     "$$\n",
-    "J_n = e \\mu_n n \\mathbf{E} + e D_n \\frac{\\partial n}{\\partial x} \\tag{6.21}\n",
+    "J_n = e \\mu_n n \\mathbf{E} + e D_n \\frac{\\partial n}{\\partial x} \n",
     "$$\n",
     "\n",
     "---\n",
