--- a/Continuity_Equations.ipynb
+++ b/Continuity_Equations.ipynb
@@ -102,7 +102,7 @@
     "$$\n",
     "D_p \\frac{\\partial^2 (\\delta p)}{\\partial x^2}\n",
     "- \\mu_p \\left( \\mathbf{E} \\frac{\\partial (\\delta p)}{\\partial x} + p \\frac{\\partial \\mathbf{E}}{\\partial x} \\right)\n",
-    "+ g_p - \\frac{p}{\\tau_{pt}} = \\frac{\\partial (\\delta p)}{\\partial t} \\tag{6.29}\n",
+    "+ g_p - \\frac{p}{\\tau_{pt}} = \\frac{\\partial (\\delta p)}{\\partial t} \n",
     "$$\n",
     "\n",
     "### For Excess Electrons:\n",
@@ -110,7 +110,7 @@
     "$$\n",
     "D_n \\frac{\\partial^2 (\\delta n)}{\\partial x^2}\n",
     "+ \\mu_n \\left( \\mathbf{E} \\frac{\\partial (\\delta n)}{\\partial x} + n \\frac{\\partial \\mathbf{E}}{\\partial x} \\right)\n",
-    "+ g_n - \\frac{n}{\\tau_{nt}} = \\frac{\\partial (\\delta n)}{\\partial t} \\tag{6.30}\n",
+    "+ g_n - \\frac{n}{\\tau_{nt}} = \\frac{\\partial (\\delta n)}{\\partial t} \n",
     "$$\n",
     "\n",
     "Where:\n",
