--- a/Ambipolar_Transport_Equations.ipynb
+++ b/Ambipolar_Transport_Equations.ipynb
@@ -132,7 +132,7 @@
     "Assuming $n_0 \\gg p_0$ and $\\delta p \\ll n_0$:\n",
     "\n",
     "$$\n",
-    "D' = D_p \\tag{6.47}, \\quad \\mu' = -\\mu_p \n",
+    "D' = D_p  \\quad \\mu' = -\\mu_p \n",
     "$$"
    ]
   },
