--- a/Ambipolar_Transport_Equations.ipynb
+++ b/Ambipolar_Transport_Equations.ipynb
@@ -160,14 +160,15 @@
     "**For p-type semiconductor**:\n",
     "\n",
     "$$\n",
-    "D_n \\frac{\\partial^2 (\\delta n)}{\\partial x^2} + \\mu_n \\mathbf{E} \\frac{\\partial (\\delta n)}{\\partial x} + g' - \\frac{\\delta n}{\\tau_{n0}} = \\frac{\\partial (\\delta n)}{\\partial t} \n",
+    "D_n \\frac{\\partial^2 (\\delta n)}{\\partial x^2} + \\mu_n \\mathbf{E} \\frac{\\partial (\\delta n)}{\\partial x} + g' - \\frac{\\delta n}{\\tau_{n0}} = \\frac{\\partial (\\delta n)}{\\partial t} \tag{1} \n",
     "$$\n",
     "\n",
     "**For n-type semiconductor**:\n",
     "\n",
     "$$\n",
-    "D_p \\frac{\\partial^2 (\\delta p)}{\\partial x^2} - \\mu_p \\mathbf{E} \\frac{\\partial (\\delta p)}{\\partial x} + g' - \\frac{\\delta p}{\\tau_{p0}} = \\frac{\\partial (\\delta p)}{\\partial t} \n",
+    "D_p \\frac{\\partial^2 (\\delta p)}{\\partial x^2} - \\mu_p \\mathbf{E} \\frac{\\partial (\\delta p)}{\\partial x} + g' - \\frac{\\delta p}{\\tau_{p0}} = \\frac{\\partial (\\delta p)}{\\partial t} \tag{2} \n",
     "$$"
+    "It is crucial to understand that the transport and recombination parameters in Equations (1) and (2) correspond to those of the minority carriers. These equations govern how excess minority carriers move and recombine over time and space due to drift and diffusion. Under the assumption of charge neutrality, the excess majority carrier concentration equals that of the minority carriers. As a result, the excess majority carriers move together with the minority carriers, and their behavior is dictated by the minority carrier properties. This ambipolar transport effect is fundamental in semiconductor physics and forms the foundation for analyzing and modeling the behavior of semiconductor devices."
    ]
   }
  ],
