--- a/SRH_Recombination_Theory.ipynb
+++ b/SRH_Recombination_Theory.ipynb
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Final SRH Recombination Rate\n",
+    "## SRH Recombination Rate\n",
     "Assuming $R_n = R_p$:\n",
     "$$\n",
     "R = R_n = R_p = \\frac{C_n C_p N_t (np - n_i^2)}{C_n(n + n') + C_p(p + p')} \n",
