--- a/PN_Junction_BuiltIn_Potential.ipynb
+++ b/PN_Junction_BuiltIn_Potential.ipynb
@@ -115,6 +115,36 @@
     "$$V_{bi} = \\frac{kT}{e} \\ln\\left(\\frac{N_d N_a}{n_i^2}\\right) = V_t \\ln\\left(\\frac{N_d N_a}{n_i^2}\\right)$$"
    ]
   },
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Space Charge Width\n",
+    "\n",
+    "$$\n",
+    "x_p = \\frac{N_d x_n}{N_a}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "x_n = \\left\\{ \\frac{2 \\varepsilon_s V_{bi}}{e} \\left[ \\frac{N_a}{N_d} \\right] \\left[ \\frac{1}{N_a + N_d} \\right] \\right\\}^{1/2}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "x_p = \\left\\{ \\frac{2 \\varepsilon_s V_{bi}}{e} \\left[ \\frac{N_d}{N_a} \\right] \\left[ \\frac{1}{N_a + N_d} \\right] \\right\\}^{1/2}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "W = x_n + x_p\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "W = \\left\\{ \\frac{2 \\varepsilon_s V_{bi}}{e} \\left[ \\frac{N_a + N_d}{N_a N_d} \\right] \\right\\}^{1/2}\n",
+    "$$\n"
+   ]
+  },
+
   {
    "cell_type": "code",
    "execution_count": null,
