--- a/PN_Junction_BuiltIn_Potential.ipynb
+++ b/PN_Junction_BuiltIn_Potential.ipynb
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Space Charge Width\n",
+    "# Space Charge Width Zero Biased\n",
     "\n",
     "$$\n",
     "x_p = \\frac{N_d x_n}{N_a}\n",
