--- a/PN_Junction_BuiltIn_Potential.ipynb
+++ b/PN_Junction_BuiltIn_Potential.ipynb
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Space Charge Width Zero Biased\n",
+    "# Space Charge Width with Zero Biased\n",
     "\n",
     "$$\n",
     "x_p = \\frac{N_d x_n}{N_a}\n",
@@ -139,6 +139,17 @@
     "\n",
     "$$\n",
     "W = \\left\\{ \\frac{2 \\varepsilon_s V_{bi}}{e} \\left[ \\frac{N_a + N_d}{N_a N_d} \\right] \\right\\}^{1/2}\n",
+    "$$\n"
+   ]
+  },
+{
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Space Charge Width with Reverse Bias\n",
+    "\n",
+    "$$\n",
+    "W = \\left\\{ \\frac{2 \\varepsilon_s (V_{bi} + V_R)}{e} \\left[ \\frac{N_a + N_d}{N_a N_d} \\right] \\right\\}^{1/2}\n",
     "$$\n"
    ]
   },
