--- a/PN_Junction_BuiltIn_Potential.ipynb
+++ b/PN_Junction_BuiltIn_Potential.ipynb
@@ -153,6 +153,34 @@
     "$$\n"
    ]
   },
+{
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Maximum Electric Field in PN Junction\n",
+        "\n",
+        "From the built-in potential and reverse bias:\n",
+        "\n",
+        "$$\n",
+        "E_{\\text{max}} = - \\left\\{ \\frac{2e(V_{bi} + V_R)}{\\varepsilon_s} \\left( \\frac{N_a N_d}{N_a + N_d} \\right) \\right\\}^{1/2}\n",
+        "$$\n",
+        "\n",
+        "This expression represents the peak electric field at the metallurgical junction."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Alternatively, using the total space charge width $W$:\n",
+        "\n",
+        "$$\n",
+        "E_{\\text{max}} = \\frac{-2(V_{bi} + V_R)}{W}\n",
+        "$$\n",
+        "\n",
+        "where $W$ is the total depletion width."
+      ]
+    },
   {
    "cell_type": "code",
    "execution_count": null,
