--- a/PN_Junction_BuiltIn_Potential.ipynb
+++ b/PN_Junction_BuiltIn_Potential.ipynb
@@ -181,6 +181,21 @@
         "where $W$ is the total depletion width."
       ]
     },
+{
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Junction Capacitance in a PN Junction\n",
+        "\n",
+        "The depletion or junction capacitance per unit area $C'$ is given by:\n",
+        "\n",
+        "$$\n",
+        "C' = \\left\\{ \\frac{e \\varepsilon_s N_a N_d}{2(V_{bi} + V_R)(N_a + N_d)} \\right\\}^{1/2}\n",
+        "$$\n",
+        "\n",
+        "This capacitance depends on the applied reverse bias $V_R$, built-in potential $V_{bi}$, and doping concentrations $N_a$ and $N_d$."
+      ]
+    },
   {
    "cell_type": "code",
    "execution_count": null,
