--- a/Index.ipynb
+++ b/Index.ipynb
@@ -5,7 +5,7 @@
    "id": "9571b26f",
    "metadata": {},
    "source": [
-    "# 📘 Index of Jupyter Notebooks in DevicePhysics Repository\n",
+    "# Index of Jupyter Notebooks in DevicePhysics Repository\n",
     "\n",
     "- [Conductivity Resistivity](./Conductivity_Resistivity.ipynb)\n",
     "- [Diffusion Current Density](./Diffusion_Current_Density.ipynb)\n",
